[package]
name = "mirust_macros"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Attribute macro for exporting mIRC/AdiIRC-compatible DLL functions in Rust."
homepage = "https://github.com/irc-rs/mirust"
repository = "https://github.com/irc-rs/mirust_macros"
readme = "README.md"
keywords = ["irc", "ircx", "mIRC", "AdiIRC", "DLL"]
categories = ["development-tools"]
maintenance = { status = "passively-maintained" }

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = { version = "1.0" }
